deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: emojicodeplayground
  namespace: emojicodeplayground
  labels:
    app: emojicodeplayground
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emojicodeplayground
  template:
    metadata:
      labels:
        app: emojicodeplayground
    spec:
      containers:
      - name: emojicodeplayground
        image: theothertomelliott/emojicode-playground:0.1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: emojicodeplayground
  namespace: emojicodeplayground
spec:
  type: NodePort
  selector:
    app: emojicodeplayground
  ports:
  - name: http
    targetPort: 8080
    port: 80
