ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojicodeplayground
  namespace: emojicodeplayground
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/server-alias: emojicode.*
spec:
  rules:
  - host: emojicode
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emojicodeplayground
            port:
              name: http
